Add Prisma module, add config module, and add auth module

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ DATABASE_PORT=3360
 DATABASE_NAME=hunterrankDb
 DATABASE_PASSWORD=hun7errank
 DATABASE_URL="mysql://root:hun7errank@localhost:3360/hunterrankDb"
+JWT_SECRET=hun7errank
