--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start-db:dev": "docker compose rm hunterrankdb -s -f -v && docker compose up hunterrankdb -d && sleep 1 && npx prisma migrate deploy",
+    "restart-db:dev": "docker compose rm hunterrankdb -s -f -v && docker compose up hunterrankdb -d && sleep 1 && npx prisma migrate deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,6 +26,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.14.0",
