--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.6",
+    "@nestjs/websockets": "^8.4.6",
     "@prisma/client": "^3.14.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
