--- a/server/.env
+++ b/server/.env
@@ -12,5 +12,5 @@ SERVER_PORT=4000
 DATABASE_PORT=3360
 DATABASE_NAME=hunterrankDb
 DATABASE_PASSWORD=hun7errank
-DATABASE_URL="mysql://root:hun7errank@localhost:3360/hunterrankDb"
+DATABASE_URL='mysql://0ncwngt7xq1l:pscale_pw_ppOp9YP3gei2rCONMOKRLCaX3Bxd21RgvjgbThXy5Gg@0jl1tx1ovrpx.us-east-4.psdb.cloud/hunterrank-db?sslaccept=strict'
 JWT_SECRET=hun7errank
