--- a/server/.gitignore
+++ b/server/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Keep environment variables out of version control
+.env
+.env.development
+.env.production
