--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "googleapis": "^104.0.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
